--- a/table.html
+++ b/table.html
@@ -2,6 +2,24 @@
 <html>
 	<head>
 		<title> My Webpage! </title>
+		<style>
+			table {
+			          border: 2px solid black;
+			          border-collapse: collapse;
+			          width: 50%;
+			}
+		</style>
+		<style>
+			th, td {
+			          border: 1px solid black;
+			          text-align: center;
+			}
+			th {
+			     background-color: lightgray;
+			     padding: 5px;
+			}
+		</style>
+
 	</head>
 	<body>
 		<h1> Presidents </h1>
